--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.13.1",
     "postcss": "^7.0.13",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-import": "^12.0.1",
@@ -55,6 +56,7 @@
     "postcss-url": "^8.0.0",
     "react-hot-loader": "^4.6.3",
     "redux-devtools-extension": "^2.13.7",
+    "sass-loader": "^8.0.2",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.7.5",
