--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --hot --progress --color --port 3000 --config config/webpack.config.js",
-    "open": "yarn start --open",
+    "start": "webpack-dev-server --mode development --progress --color --port 3000 --config config/webpack.config.js",
+    "open": "yarn start --open --hot",
     "build": "webpack -p --progress --colors --config config/webpack.config.js",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
